# PromptOptimizer

./: .env.example  .gitignore  README.md  package_release.py  pyproject.toml  requirements.txt
scripts/: run_local.bat  run_local.sh  run_tests.sh
src/llm_gateway/: __init__.py  main.py
src/llm_gateway/api/: dependencies.py  routes.py
src/llm_gateway/caching/: __init__.py  base.py  embeddings.py  manager.py  memory.py  redis_backend.py
src/llm_gateway/coaching/: __init__.py  coach.py  scorer.py
src/llm_gateway/config/: settings.py
src/llm_gateway/core/: exceptions.py  models.py  orchestrator.py
src/llm_gateway/governance/: __init__.py  policy.py  tokens.py
src/llm_gateway/observability/: __init__.py  logging.py  metrics.py
src/llm_gateway/optimization/: __init__.py  cleaner.py  compressor.py  deduper.py  guardrails.py  normalizer.py  optimizer.py  pruner.py
src/llm_gateway/providers/: base.py  echo.py  openai_provider.py  registry.py
src/llm_gateway/routing/: __init__.py  router.py
tests/: conftest.py  test_api.py  test_cache.py  test_coaching.py  test_e2e.py  test_governance.py  test_optimizer.py  test_pruner_cleaner.py
ui/: index.html
